nginx/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx
